--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -26,6 +26,10 @@ Size=500,440
 Pos=718,68
 Size=531,70
 
+[Window][Ocean Simulation Editor]
+Pos=1168,35
+Size=674,256
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
