[UPD] single ocean plane for now

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -27,8 +27,16 @@ Pos=718,68
 Size=531,70
 
 [Window][Ocean Simulation Editor]
-Pos=1168,35
-Size=674,256
+Pos=1212,30
+Size=665,346
+
+[Window][Ocean Simulation Editor #]
+Pos=60,60
+Size=441,305
+
+[Window][cean Simulation Editor #]
+Pos=659,132
+Size=579,285
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
