[ADD] editor systems [ADD] widgets [ADD] widget containers [ADD] transform widget [ADD] ocean widget [ADD] selectable entities widget

--- a/Waldem/Waldem.vcxproj
+++ b/Waldem/Waldem.vcxproj
@@ -170,14 +170,21 @@
     <ClInclude Include="src\Waldem\ECS\Components\MainCamera.h" />
     <ClInclude Include="src\Waldem\ECS\Components\MeshComponent.h" />
     <ClInclude Include="src\Waldem\ECS\Components\ModelComponent.h" />
+    <ClInclude Include="src\Waldem\ECS\Components\NameComponent.h" />
     <ClInclude Include="src\Waldem\ECS\Components\Ocean.h" />
     <ClInclude Include="src\Waldem\ECS\Components\Selected.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\DebugSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\DeferredRenderingSystem.h" />
-    <ClInclude Include="src\Waldem\ECS\Systems\EditorTransformsManipulationSystem.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\IWidgetContainerSystem.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\MainWidgetContainer.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\GuizmoEditorSystem.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\EntityDetailsWidgetContainer.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\WidgetSystem.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\Widgets\ComponentWidgets\OceanComponentWidget.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\Widgets\ComponentWidgets\TransformComponentWidget.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\EditorSystems\Widgets\HierarchyWidget.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\ForwardRenderingSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\FreeLookCameraSystem.h" />
-    <ClInclude Include="src\Waldem\ECS\Systems\OceanSimulationEditorSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\OceanSimulationSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\PostProcessSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\ScreenQuadSystem.h" />
