--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -38,6 +38,18 @@ Size=441,305
 Pos=659,132
 Size=579,285
 
+[Window][Transform]
+Pos=1499,22
+Size=417,169
+
+[Window][Ocean]
+Pos=1672,213
+Size=208,215
+
+[Window][Entities]
+Pos=2,21
+Size=359,932
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
